# pibicut

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
pibicut/: hooks.py  modules.txt
pibicut/config/: desktop.py  docs.py
pibicut/pibicut/: custom.py
pibicut/pibicut/doctype/shortener/: shortener.js  shortener.json  shortener.py  shortener_list.js  test_shortener.py
pibicut/pibicut/doctype/shortener/templates/: shortener.html
