[project]
name = "pibicut"
authors = [
    { name = "PibiCo", email = "pibico.sl@gmail.com"}
]
description = "Frappe/ERPNext URL Shortener"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "license.txt" }
dynamic = ["version"]
dependencies = [
    # Core dependencies
    "qrcode",
    "pillow",
    "six",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

